--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,106 +1,8 @@
-/* * {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-html {
-  scroll-behavior: smooth;
-  overflow-x: hidden;
-}
-body {
-  min-height: 100vh;
-  margin: 0;
-  padding: 0;
-}
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-textarea {
-  position: absolute;
-  min-width: 320px;
-  width: 40%;
-  top: 100px;
-  resize: none;
+@font-face {
+  font-family: 'Raleway', sans-serif;
+  src: url('../assets/fonts/Raleway-Regular.ttf') format('truetype');
 }
 
-.keyboard {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  padding: 5px 0;
-  background-color: lightslategrey;
-  box-shadow: 0 0 50px rgba(0, 0, 0, 0.05);
-  user-select: none;
-  transition: bottom 0.5s;
-}
-
-.keyboard--hidden {
-  bottom: -100%;
-}
-.keyboard__keys {
-  text-align: center;
-}
-.keyboard__key {
-  height: 45px;
-  width: 6%;
-  max-width: 90px;
-  margin: 3px;
-  border-radius: 4px;
-  border: none;
-  background: darkslategrey;
-  color: antiquewhite;
-  font-size: 1.05rem;
-  outline: none;
-  cursor: pointer;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  vertical-align: top;
-  padding: 0;
-  position: relative;
-}
-.arrows {
-  max-width: 50%;
-  max-height: 80%;
-}
-
-.keyboard__key:active {
-  background-color: rgba(0, 0, 0, 0.6);
-}
-..keyboard__key--big {
-  width: 8%;
-}
-.keyboard__key--wide {
-  width: 10%;
-}
-.keyboard__key--widely {
-  width: 12%;
-}
-.keyboard__key--extra-wide {
-  width: 36%;
-  max-width: 500px;
-}
-.keyboard__key--activatable::after {
-  content: '';
-  top: 6px;
-  left: 6px;
-  position: absolute;
-  width: 7px;
-  height: 7px;
-  border-radius: 50%;
-  background: rgba(255, 255, 255, 0.3);
-}
-.keyboard__key--active::after {
-  background: #ffffff;
-} */
-
-@charset "UTF-8";
-/*Обнуление*/
 * {
   padding: 0;
   margin: 0;
@@ -147,34 +49,12 @@ textarea {
   font-family: inherit;
 }
 
-input::-ms-clear {
-  display: none;
-}
-
 button {
   cursor: pointer;
 }
 
-button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-
-a,
-a:visited {
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: none;
-}
-
-ul li {
+li {
   list-style: none;
-}
-
-img {
-  vertical-align: top;
 }
 
 h1,
@@ -183,12 +63,9 @@ h3,
 h4,
 h5,
 h6 {
+  font-family: 'Raleway', sans-serif;
   font-size: inherit;
   font-weight: 400;
-}
-
-body {
-  font-family: 'Roboto', sans-serif;
 }
 
 .wrapper {
@@ -196,13 +73,12 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background: linear-gradient(
+    to bottom right,
+    rgb(37, 1, 1),
+    rgb(252, 134, 154)
+  );
 }
-/* 
-[class*='__container'] {
-  max-width: 1200px;
-  margin: 0px auto;
-  padding: 0 15px;
-} */
 
 .keyboard__container {
   max-width: 1200px;
@@ -216,23 +92,30 @@ body {
 }
 
 .title {
+  font-family: 'Raleway', sans-serif;
   font-size: 3rem;
   padding: 20px;
+  font-weight: 700;
+  line-height: 110%;
+  letter-spacing: 5px;
 }
 
 .keyboard__output {
   width: 90%;
-  border: 2px solid rgba(0, 0, 0, 0.8);
+  border: 2px solid #000;
   border-radius: 10px;
   font-size: 1.2rem;
   padding: 15px;
   resize: none;
 }
+.keyboard__output:focus {
+  border: 2px solid rgb(180, 8, 8);
+}
 
 .keyboard__keys {
   margin-top: 20px;
   padding: 20px;
-  border: 2px solid rgba(0, 0, 0, 0.8);
+  border: 2px solid #000000;
   background: darkslategray;
   border-radius: 7px;
   display: flex;
@@ -246,7 +129,7 @@ body {
 .key {
   height: 45px;
   width: 45px;
-  border: 1px solid rgb(151, 12, 12);
+  border: 2px solid rgb(151, 12, 12);
   border-radius: 4px;
   margin: 5px;
   cursor: pointer;
@@ -259,12 +142,12 @@ body {
   background: rgba(26, 23, 23, 0.9);
 }
 .key:hover {
-  color: rgba(0, 0, 0, 0.9);
-  background: rgba(255, 255, 255, 0.9);
+  color: #fff;
+  background: rgb(134, 32, 32, 0.7);
   transition: all 0.5s ease-out;
 }
 .key.active {
-  background: rgb(0, 255, 0);
+  background: rgb(134, 32, 32);
   transition: all 0.3s ease-out;
 }
 
@@ -273,12 +156,15 @@ body {
 }
 
 .key__extra-wide {
-  width: 375px;
+  width: 350px;
 }
 
 .keyboard__description {
   margin-top: 20px;
 }
 .keyboard__description p {
+  font-family: 'Raleway', sans-serif;
+  color: peachpuff;
   padding: 10px 0;
+  letter-spacing: 2px;
 }
